changed input types

--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -17,7 +17,7 @@
             Username:<input name='username' placeholder='username' type='text' />
         </label>
         <label for='password'>
-            Password:<input name='password' placeholder='password' type='text' />
+            Password:<input name='password' placeholder='password' type='password' />
         </label>
         <button type='submit'>Submit</button>
     </form>
