--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -9,7 +9,7 @@
     <h1><%= title %></h1>
     <form action='' method='POST'>
         <label for='admin_pass'>
-            Admin Password:<input name='admin_pass' placeholder='password' type='text' />
+            Admin Password:<input name='admin_pass' placeholder='password' type='password' />
         </label>
         <button type='submit'>Submit</button>
     </form>
