--- a/views/member.ejs
+++ b/views/member.ejs
@@ -9,7 +9,7 @@
     <h1><%= title %></h1>
     <form action='' method='POST'>
         <label for='member_pass'>
-            Membership Password:<input name='member_pass' placeholder='password' type='text' />
+            Membership Password:<input name='member_pass' placeholder='password' type='password' />
         </label>
         <button type='submit'>Submit</button>
     </form>
