--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
           <a href='/log-out'>Log Out</a>
         <% } else { %>
         <p>Welcome to the <%= title %>!</p>
-        <h2>Please Log In</h2>
+        <h2>Please Log In:</h2>
         <form action="/log-in" method="POST">
           <label for="username">Username</label>
           <input name="username" placeholder="username" type="text" />
